# libgnome

./: .cvsignore  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libgnome-zip.in  libgnome.doap  message-of-doom
doc/: ChangeLog  Makefile.am  Makefile.in  Porting-1.0-2.0.txt  depends.dia
doc/reference/: .cvsignore  Makefile.am  Makefile.in  libgnome-docs.sgml  libgnome-sections.txt
doc/reference/tmpl/: .cvsignore  gnome-config.sgml  gnome-exec.sgml  gnome-gconf.sgml  gnome-help.sgml  gnome-i18n.sgml  gnome-init.sgml  gnome-marshal.sgml  gnome-preferences.sgml  gnome-program.sgml  gnome-score.sgml  gnome-sound.sgml  gnome-triggers.sgml  gnome-url.sgml  gnome-util.sgml  libgnome.sgml  libgnometypebuiltins.sgml
gnome-data/: .cvsignore  Makefile.am  Makefile.in  gnome-2.soundlist.in  gnome-default.xml.in.in  gnome-options.7  gnome.soundlist  gtk-events-2.soundlist.in  gtk-events.soundlist
help-converters/: ChangeLog  Makefile.am  README
help-converters/docbook/: .cvsignore  Makefile.am  gnome-db2html3.c
help-converters/docbook/gnome-customization/: Makefile.am  eric_customization.xsl  gnome-custom.xsl  gnome-customization.xsl  l10n.xml
help-converters/gnome-vfs-module/: .cvsignore  Makefile.am  help-method.c  help-methods.conf.in
help-converters/info/: .cvsignore
help-converters/man/: .cvsignore
idl/: ChangeLog  Gnome.idl  Makefile.am
libgnome/: .cvsignore  ChangeLog  ChangeLog-19991006  DEPENDS.libgnome  Makefile.am  Makefile.in  dllmain.c  dns-helper.c  gconfigger.c  gnome-config.c  gnome-config.h  gnome-defs.h  gnome-dentry.c  gnome-dentry.h  gnome-directory-filter.c  gnome-directory-filter.h  gnome-dl.c  gnome-dl.h  gnome-dns.c  gnome-dns.h  gnome-dump.c  gnome-exec.c  gnome-exec.h  gnome-file-selector.c  gnome-file-selector.h  gnome-fileconvert.c  gnome-fileconvert.h  gnome-gconf.c  gnome-gconf.h  gnome-gconfP.h  gnome-gen-mimedb.c  gnome-help.c  gnome-help.h  gnome-history.c  gnome-history.h  gnome-hook.c  gnome-hook.h  gnome-i18n.c  gnome-i18n.h  gnome-i18nP.h  (+78 more)
monikers/: .cvsignore  ChangeLog  Foo.idl  GNOME_Moniker_std.oaf.in.in  GNOME_Moniker_std.server.in.in  Makefile.am  Makefile.am-50588  Makefile.in  bonobo-config-bag.c  bonobo-moniker-conf-indirect.c  bonobo-moniker-config.c  bonobo-moniker-extender-file.c  bonobo-moniker-extra.c  bonobo-moniker-extra.h  bonobo-moniker-file.c  bonobo-moniker-vfs.c  bonobo-storage-fs.c  bonobo-storage-fs.h  bonobo-storage-vfs.c  bonobo-storage-vfs.h  bonobo-stream-fs.c  bonobo-stream-fs.h  bonobo-stream-vfs.c  bonobo-stream-vfs.h  foo-dist.desktop  gnome-moniker-std.c  gnome-moniker-std.h  test-ditem.c
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  (+59 more)
schemas/: .cvsignore  Makefile.am  Makefile.in  desktop_gnome_accessibility_keyboard.schemas  desktop_gnome_accessibility_keyboard.schemas.in  desktop_gnome_accessibility_startup.schemas.in  desktop_gnome_applications_at_mobility.schemas.in  desktop_gnome_applications_at_visual.schemas.in  desktop_gnome_applications_browser.schemas.in  desktop_gnome_applications_editor.schemas  desktop_gnome_applications_help_viewer.schemas.in  desktop_gnome_applications_terminal.schemas  desktop_gnome_applications_terminal.schemas.in  desktop_gnome_applications_window_manager.schemas  desktop_gnome_applications_window_manager.schemas.in  desktop_gnome_background.schemas  desktop_gnome_background.schemas.in  desktop_gnome_background.schemas.in.in  desktop_gnome_file_views.schemas  desktop_gnome_file_views.schemas.in  desktop_gnome_interface.schemas  desktop_gnome_interface.schemas.in  desktop_gnome_interface.schemas.in.in  desktop_gnome_lockdown.schemas.in  desktop_gnome_peripherals_keyboard.schemas  desktop_gnome_peripherals_keyboard.schemas.in  desktop_gnome_peripherals_mouse.schemas  desktop_gnome_peripherals_mouse.schemas.in  desktop_gnome_sound.schemas.in  desktop_gnome_thumbnail_cache.schemas.in  desktop_gnome_thumbnailers.schemas.in  desktop_gnome_typing_break.schemas.in  desktop_gnome_url_handlers.schemas  desktop_gnome_url_handlers.schemas.in
tests/: .cvsignore  Makefile.am  test-help-path.c  test-moniker.c  test-storage.c
tools/: .cvsignore  ChangeLog  Makefile.am  gnome-makeenums.pl  gnome-maketypes.awk.in
