AUTOMAKE_OPTIONS = 1.7

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

SUBDIRS = libgnome monikers schemas gnome-data po doc

EXTRA_DIST = \
	COPYING.LIB		\
	NEWS			\
	MAINTAINERS		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	libgnome-zip.in		\
	gtk-doc.make

DISTCLEANFILES = \
  intltool-extract \
  intltool-merge \
  intltool-update
