## Process this file with automake to produce Makefile.in

#
# Targets
#

LIB_VERSION=0:0:0
LIB_VERSION_NUM=0.0.0

ORBIT_IDL = @ORBIT_IDL@

lib_LTLIBRARIES = libgnome-2.la

LINK = $(LIBTOOL) --mode=link $(CC) $(CFLAGS) $(LDFLAGS) -o $@

soundplugindir = $(libdir)/gnome-2.0/sound-plugins

libincludedir = $(includedir)/gnome/2

libgnomeincludedir = $(includedir)/gnome/2/libgnome

INCLUDES = \
	-I..							\
	-I$(srcdir)/..						\
	$(WARN_CFLAGS)						\
	$(LIBGNOME_CFLAGS)					\
	-DLIBGNOME_PREFIX=\""$(prefix)"\"			\
	-DLIBGNOME_LIBDIR=\""$(libdir)"\"			\
	-DLIBGNOME_DATADIR=\""$(datadir)"\"			\
	-DLIBGNOME_BINDIR=\""$(bindir)"\"			\
	-DLIBGNOME_LOCALSTATEDIR=\""$(localstatedir)"\"		\
	-DLIBGNOME_LOCALEDIR=\""$(gnomelocaledir)"\"		\
	-DLIBGNOME_SYSCONFDIR=\""$(sysconfdir)"\"		\
	-DLIBGNOME_SOUNDPLUGINDIR=\""$(soundplugindir)"\"	\
	-DVERSION=\""$(VERSION)"\"				\
	-DGNOMEVFSVERSION=\"$(GNOME_VFS_VERSION)\"		\
	-DG_LOG_DOMAIN=\"Gnome\"

CORBA_SOURCE =			\
	Gnome.h			\
	Gnome-common.c		\
	Gnome-stubs.c		\
	Gnome-skels.c

idls =							\
	$(top_srcdir)/idl/Gnome.idl

idl_flags = -I @BONOBO_IDLDIR@ -D__GNOME_COMPILATION

$(CORBA_SOURCE): $(idls) $(ORBIT_IDL)
	$(ORBIT_IDL) $(top_srcdir)/idl/Gnome.idl -I$(top_srcdir)/idl $(idl_flags)

libgnome_src = \
	libgnometypebuiltins.h	\
	libgnometypebuiltins.c	\
	gnome-program.c		\
	gnome-sound.c		\
	gnome-triggers.c	\
	gnome-exec.c		\
	gnome-url.c		\
	gnome-util.c		\
	gnome-preferences.c	\
	gnome-marshal-main.c	\
	libgnome-init.c

$(gnome2_src) : $(CORBA_SOURCE)
CLEANFILES += $(CORBA_SOURCE)

libgnome_2_la_SOURCES = \
	$(libgnome_src)		\
	$(CORBA_SOURCE)

libinclude_HEADERS = \
	libgnome.h

libgnome_headers = \
	gnome-program.h		\
	gnome-sound.h		\
	gnome-i18n.h		\
	gnome-exec.h		\
	gnome-triggers.h 	\
	gnome-url.h		\
	gnome-util.h   		\
	gnome-preferences.h	\
	gnome-marshal.h		\
	libgnome-init.h

libgnomeinclude_HEADERS = \
	Gnome.h			\
	libgnometypebuiltins.h	\
	$(libgnome_headers)

noinst_HEADERS = \
	gnome-triggersP.h

if HAVE_CSL
cslmodules = gnomesoundplugin_csl.la
else
cslmodules =
endif

soundplugin_LTLIBRARIES = $(cslmodules)

gnomesoundplugin_csl_la_SOURCES = \
	gnome-sound-csl.c

gnomesoundplugin_csl_la_LIBADD = \
	$(LIBGNOME_CSL_LIBS)

gnomesoundplugin_csl_la_LDFLAGS = \
	-export-dynamic -module

# all autogenerated files need to be generated in the srcdir,
# so old versions get remade and are not confused with newer
# versions in the build dir. thus a development setup requires
# srcdir to be writable, passing --disable-rebuilds to
# ../configure will supress all autogeneration rules.
$(srcdir)/stamp-libgnome.defs: @REBUILD@ Makefile.am libgnome.defs libgnome-boxed.defs $(libgnome_headers)
	cd $(srcdir) \
	&& glib-mkenums \
			--comments ";; @comment@" \
			--fprod "; enumerations from \"@filename@\"\n " \
			--vhead "(define-@type@ @EnumName@" \
			--vprod "   (@valuenick@ @VALUENAME@)" \
			--vtail ")" \
		$(libgnome_headers) > xgen-gdef \
	&& cat libgnome-boxed.defs >> xgen-gdef \
	&& (cmp -s xgen-gdef libgnome.defs || cp xgen-gdef libgnome.defs) \
	&& rm -f xgen-gdef \
	&& echo timestamp > $(@F)

$(srcdir)/libgnometypebuiltins.c: @REBUILD@ Makefile.am $(libgnome_headers)
	cd $(srcdir) \
	&& glib-mkenums \
			--fhead "#include <gobject/genums.h>\n" \
			--fhead "#include \"libgnometypebuiltins.h\"\n\n" \
			--fprod "\n/* enumerations from \"@filename@\" */" \
			--vhead "static const G@Type@Value _@enum_name@_values[] = {" \
			--vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
			--vtail "  { 0, NULL, NULL }\n};\n\n" \
			--vtail "GType\n@enum_name@_get_type (void)\n{\n" \
			--vtail "  static GType type = 0;\n\n" \
			--vtail "  if (!type)\n" \
			--vtail "    type = g_@type@_register_static (\"@EnumName@\", _@enum_name@_values);\n\n" \
			--vtail "  return type;\n}\n\n" \
		$(libgnome_headers) > xgen-gtbec \
	&& cp xgen-gtbec $(@F) \
	&& rm -f xgen-gtbec

$(srcdir)/libgnometypebuiltins.h: @REBUILD@ Makefile.am $(libgnome_headers)
	cd $(srcdir) \
	&& glib-mkenums \
			--fhead "#ifndef __LIBGNOMETYPEBUILTINS_H__\n" \
			--fhead "#define __LIBGNOMETYPEBUILTINS_H__ 1\n\n" \
			--fhead "#include <libgnome/libgnome.h>\n\n" \
			--fhead "G_BEGIN_DECLS\n\n" \
			--ftail "G_END_DECLS\n\n" \
			--ftail "#endif /* __LIBGNOMETYPEBUILTINS_H__ */\n" \
			--fprod "\n/* --- @filename@ --- */" \
			--eprod "#define GNOME_TYPE_@ENUMSHORT@ @enum_name@_get_type()\n" \
			--eprod "GType @enum_name@_get_type (void);\n" \
		$(libgnome_headers) > xgen-gth \
	&& cp xgen-gth $(@F) \
	&& rm -f xgen-gth

$(srcdir)/stamp-gnome-marshal.h: gnome-marshal.list
	cd $(srcdir) \
	&& glib-genmarshal --prefix=gnome_marshal gnome-marshal.list --header >> xgen-gmh \
	&& (cmp -s xgen-gmh gnome-marshal.h || cp xgen-gmh gnome-marshal.h) \
	&& rm -f xgen-gmh xgen-gmh~ \
	&& echo timestamp > $(@F)

$(srcdir)/gnome-marshal.h $(srcdir)/gnome-marshal.c: stamp-gnome-marshal.h
	cd $(srcdir) \
	&& glib-genmarshal --prefix=gnome_marshal gnome-marshal.list --body >> xgen-gmc \
	&& cp xgen-gmc gnome-marshal.c \
	&& rm -f xgen-gmc xgen-gmc~

EXTRA_DIST = \
	libgnome-2.0.pc.in		\
	gnome-marshal.list

BUILT_SOURCES = \
	libgnometypebuiltins.h		\
	libgnometypebuiltins.c		\
	gnome-marshal.h			\
	gnome-marshal.c			\
	$(CORBA_SOURCE)

libgnome_2_la_LDFLAGS = -version-info $(LIB_VERSION)
libgnome_2_la_LIBADD =		\
	$(LIBGNOME_LIBS)

noinst_PROGRAMS = \
	test-libgnome			\
	test-sound

test_libgnome_SOURCES = test-libgnome.c
test_libgnome_LDADD = \
	libgnome-2.la

test_sound_SOURCES = test-sound.c
test_sound_LDADD = \
	libgnome-2.la

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libgnome-2.0.pc

