## Process this file with automake to produce Makefile.in

#
# Targets
#

LIB_VERSION=0:0:0
LIB_VERSION_NUM=0.0.0

lib_LTLIBRARIES = libgnome-2.la

LINK = $(LIBTOOL) --mode=link $(CC) $(CFLAGS) $(LDFLAGS) -o $@

libgnomeincludedir = $(includedir)/libgnome-2.0/libgnome

INCLUDES = \
	-I..							\
	-I$(srcdir)/..						\
	$(WARN_CFLAGS)						\
	$(LIBGNOME_CFLAGS)					\
	-DLIBGNOME_PREFIX=\""$(prefix)"\"			\
	-DLIBGNOME_LIBDIR=\""$(libdir)"\"			\
	-DLIBGNOME_DATADIR=\""$(datadir)"\"			\
	-DLIBGNOME_BINDIR=\""$(bindir)"\"			\
	-DLIBGNOME_LOCALSTATEDIR=\""$(localstatedir)"\"		\
	-DLIBGNOME_LOCALEDIR=\""$(gnomelocaledir)"\"		\
	-DLIBGNOME_SYSCONFDIR=\""$(sysconfdir)"\"		\
	-DVERSION=\""$(VERSION)"\"				\
	-DGNOMEVFSVERSION=\"$(GNOME_VFS_VERSION)\"		\
	-DG_LOG_DOMAIN=\"Gnome\"

libgnome_2_la_SOURCES = \
	libgnometypebuiltins.h	\
	libgnometypebuiltins.c	\
	gnome-config.c		\
	gnome-sound.c		\
	gnome-triggers.c	\
	gnome-triggersP.h	\
	gnome-program.c		\
	gnome-help.c		\
	gnome-exec.c		\
	gnome-gconf.c		\
	gnome-gconfP.h		\
	gnome-i18n.c		\
	gnome-i18nP.h		\
	gnome-url.c		\
	gnome-util.c		\
	gnome-score.c		\
	gnome-marshal-main.c	\
	gnome-init.c

libgnome_headers = \
	gnome-config.h		\
	gnome-sound.h		\
	gnome-triggers.h	\
	gnome-program.h		\
	gnome-help.h		\
	gnome-i18n.h		\
	gnome-exec.h		\
	gnome-gconf.h		\
	gnome-url.h		\
	gnome-util.h   		\
	gnome-macros.h		\
	gnome-marshal.h		\
	gnome-score.h		\
	gnome-init.h		\
	libgnome.h

libgnomeinclude_HEADERS = \
	libgnometypebuiltins.h	\
	$(libgnome_headers)

#
# The GConf schema data installation voodoo
#
schemadir   = $(sysconfdir)/gconf/schemas
schema_DATA = libgnome.schemas

install-data-local:
	GCONF_CONFIG_SOURCE=$(GCONF_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)


# all autogenerated files need to be generated in the srcdir,
# so old versions get remade and are not confused with newer
# versions in the build dir. thus a development setup requires
# srcdir to be writable, passing --disable-rebuilds to
# ../configure will supress all autogeneration rules.
$(srcdir)/stamp-libgnome.defs: @REBUILD@ Makefile.am libgnome.defs libgnome-boxed.defs $(libgnome_headers)
	cd $(srcdir) \
	&& glib-mkenums \
			--comments ";; @comment@" \
			--fprod "; enumerations from \"@filename@\"\n " \
			--vhead "(define-@type@ @EnumName@" \
			--vprod "   (@valuenick@ @VALUENAME@)" \
			--vtail ")" \
		$(libgnome_headers) > xgen-gdef \
	&& cat libgnome-boxed.defs >> xgen-gdef \
	&& (cmp -s xgen-gdef libgnome.defs || cp xgen-gdef libgnome.defs) \
	&& rm -f xgen-gdef \
	&& echo timestamp > $(@F)

$(srcdir)/libgnometypebuiltins.c: @REBUILD@ Makefile.am $(libgnome_headers)
	cd $(srcdir) \
	&& glib-mkenums \
			--fhead "#include <glib-object.h>\n" \
			--fhead "#include \"libgnometypebuiltins.h\"\n\n" \
			--fprod "\n/* enumerations from \"@filename@\" */" \
			--vhead "static const G@Type@Value _@enum_name@_values[] = {" \
			--vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
			--vtail "  { 0, NULL, NULL }\n};\n\n" \
			--vtail "GType\n@enum_name@_get_type (void)\n{\n" \
			--vtail "  static GType type = 0;\n\n" \
			--vtail "  if (!type)\n" \
			--vtail "    type = g_@type@_register_static (\"@EnumName@\", _@enum_name@_values);\n\n" \
			--vtail "  return type;\n}\n\n" \
		$(libgnome_headers) > xgen-gtbec \
	&& cp xgen-gtbec $(@F) \
	&& rm -f xgen-gtbec

$(srcdir)/libgnometypebuiltins.h: @REBUILD@ Makefile.am $(libgnome_headers)
	cd $(srcdir) \
	&& glib-mkenums \
			--fhead "#ifndef __LIBGNOMETYPEBUILTINS_H__\n" \
			--fhead "#define __LIBGNOMETYPEBUILTINS_H__ 1\n\n" \
			--fhead "#include <libgnome/libgnome.h>\n\n" \
			--fhead "G_BEGIN_DECLS\n\n" \
			--ftail "G_END_DECLS\n\n" \
			--ftail "#endif /* __LIBGNOMETYPEBUILTINS_H__ */\n" \
			--fprod "\n/* --- @filename@ --- */" \
			--eprod "#define GNOME_TYPE_@ENUMSHORT@ @enum_name@_get_type()\n" \
			--eprod "GType @enum_name@_get_type (void);\n" \
		$(libgnome_headers) > xgen-gth \
	&& cp xgen-gth $(@F) \
	&& rm -f xgen-gth

$(srcdir)/gnome-marshal.h: @REBUILD@ Makefile.am gnome-marshal.list
	cd $(srcdir) \
	&& glib-genmarshal --prefix=gnome_marshal gnome-marshal.list --header >> xgen-gmh \
	&& (cmp -s xgen-gmh gnome-marshal.h || cp xgen-gmh gnome-marshal.h) \
	&& rm -f xgen-gmh xgen-gmh~

$(srcdir)/gnome-marshal.c: @REBUILD@ Makefile.am gnome-marshal.list
	cd $(srcdir) \
	&& glib-genmarshal --prefix=gnome_marshal gnome-marshal.list --body >> xgen-gmc \
	&& cp xgen-gmc gnome-marshal.c \
	&& rm -f xgen-gmc xgen-gmc~

EXTRA_DIST = \
	libgnome-2.0.pc.in		\
	gnome-marshal.list		\
	gnome-marshal.c			\
	parse-path.cP			\
	$(schema_DATA)

BUILT_SOURCES = \
	libgnometypebuiltins.h		\
	libgnometypebuiltins.c		\
	gnome-marshal.h			\
	gnome-marshal.c			

libgnome_2_la_LDFLAGS = \
	-version-info $(LIB_VERSION)	\
	-export-symbols-regex "^[^_].*"

libgnome_2_la_LIBADD =		\
	$(LIBGNOME_LIBS)

noinst_PROGRAMS = \
	test-libgnome

test_libgnome_SOURCES = test-libgnome.c
test_libgnome_LDADD = \
	libgnome-2.la

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libgnome-2.0.pc

